完成异步前后端联调开发，前端卡发完毕图表展示页面、异步页面、图表生成状态页面
