# MirrorBI-backend/docs/swagger.yaml
@@ -66,6 +66,9 @@ definitions:
       sortOrder:
         description: 排序顺序（默认升序）
         type: string
+      status:
+        description: 状态
+        type: string
       userId:
         description: 用户Id
         example: ""
@@ -117,6 +120,8 @@ definitions:
         type: string
       createTime:
         type: string
+      execMessage:
+        type: string
       genChart:
         type: string
       genResult:
@@ -127,6 +132,8 @@ definitions:
         example: ""
         type: string
       name:
+        type: string
+      status:
         type: string
       updateTime:
         type: string
@@ -502,6 +509,53 @@ paths:
       summary: 上传excel文件和目标信息，使用AI生成信息。
       tags:
       - chart
+  /api/chart/gen/ai/async:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: excel文件
+        in: formData
+        name: file
+        required: true
+        type: file
+      - description: 图表名称
+        example: 人数趋势
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: 分析目标
+        example: 了解用户增长
+        in: formData
+        name: goal
+        required: true
+        type: string
+      - description: 图表类型
+        example: 折线图
+        in: formData
+        name: chartType
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 生成成功，返回图表的ID
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: 生成失败，详情见响应中的code
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 上传excel文件和目标信息，异步执行AI生成信息。
+      tags:
+      - chart
   /api/chart/get:
     get:
       consumes:
@@ -589,6 +643,36 @@ paths:
           schema:
             $ref: '#/definitions/common.Response'
       summary: 根据页数查询图表列表
+      tags:
+      - chart
+  /api/chart/list/page/my/no:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 需要查询的页数、以及图表关键信息
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/chart.ChartQueryRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 查询成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/chart.ListChartResponse'
+              type: object
+        "400":
+          description: 更新失败，详情见响应中的code
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 根据页数查询图表列表，是未成功分析的列表
       tags:
       - chart
   /api/user/add:
